# Tokens

./: .gitignore  README.md  pyproject.toml
.agent/skills/cost-optimization/: SKILL.md
.agent/skills/cost-optimization/examples/: optimization_case.md
.agent/skills/cost-optimization/scripts/: cost_calc.py
docs/Artifacts/: implementation_plan.md  task.md  walkthrough.md  walkthrough_202601171.md  walkthrough＿202601170.md
src/tokencalc/: __init__.py  counter.py  main.py
